--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,18 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "outDir": "../out-tsc/app",
+    "types": []
   },
-  "files": [
+  "exclude": [
     "test.ts",
-    "polyfills.ts"
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
+    "**/*.spec.ts"
   ]
 }
